--- a/package.json
+++ b/package.json
@@ -9,10 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.16",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.18",
+    "expo-dev-client": "~2.2.1",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.22.2",
+    "graphql": "^15.8.0",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-dom": "^18.2.0",
+    "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.8.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.11",
+    "react-navigation": "^4.4.4",
+    "react-navigation-drawer": "^2.7.2",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
